// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News-Provider Render NewsContext.Consumer should match the snaphot 1`] = `
ReactWrapper {
  "length": 1,
  Symbol(enzyme.__unrendered__): <Context.Consumer>
    [Function]
  </Context.Consumer>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": <p>
      a
    </p>,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "a",
    },
    "ref": null,
    "rendered": Array [
      "a",
    ],
    "type": "p",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": <p>
        a
      </p>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "a",
      },
      "ref": null,
      "rendered": Array [
        "a",
      ],
      "type": "p",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`News-Provider Render NewsWrapper matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NewsWrapper
    initialState={
      Object {
        "limit": 0,
        "newsItemList": Object {},
        "newsItems": Array [],
        "page": 0,
        "pageTotal": 0,
        "total": 0,
        "totalPages": 0,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": undefined,
      "value": Object {
        "addNewsItem": [Function],
        "getNewsItem": [Function],
        "getNewsItems": [Function],
        "limit": 0,
        "newsItemList": Object {},
        "newsItems": Array [],
        "page": 0,
        "pageTotal": 0,
        "total": 0,
        "totalPages": 0,
      },
    },
    "ref": null,
    "rendered": null,
    "type": Object {
      "$$typeof": Symbol(react.provider),
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": [Circular],
        "_calculateChangedBits": null,
        "_changedBits": 0,
        "_changedBits2": 0,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {
          "addNewsItem": [Function],
          "getNewsItem": [Function],
          "getNewsItems": [Function],
          "limit": 0,
          "newsItemList": Object {},
          "newsItems": Array [],
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
        "_currentValue2": Object {
          "addNewsItem": [Function],
          "getNewsItem": [Function],
          "getNewsItems": [Function],
          "limit": 0,
          "newsItemList": Object {},
          "newsItems": Array [],
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
        "_defaultValue": Object {
          "addNewsItem": [Function],
          "getNewsItem": [Function],
          "getNewsItems": [Function],
          "limit": 0,
          "newsItemList": Object {},
          "newsItems": Array [],
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": undefined,
        "value": Object {
          "addNewsItem": [Function],
          "getNewsItem": [Function],
          "getNewsItems": [Function],
          "limit": 0,
          "newsItemList": Object {},
          "newsItems": Array [],
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
      },
      "ref": null,
      "rendered": null,
      "type": Object {
        "$$typeof": Symbol(react.provider),
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": [Circular],
          "_calculateChangedBits": null,
          "_changedBits": 0,
          "_changedBits2": 0,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": Object {
            "addNewsItem": [Function],
            "getNewsItem": [Function],
            "getNewsItems": [Function],
            "limit": 0,
            "newsItemList": Object {},
            "newsItems": Array [],
            "page": 0,
            "pageTotal": 0,
            "total": 0,
            "totalPages": 0,
          },
          "_currentValue2": Object {
            "addNewsItem": [Function],
            "getNewsItem": [Function],
            "getNewsItems": [Function],
            "limit": 0,
            "newsItemList": Object {},
            "newsItems": Array [],
            "page": 0,
            "pageTotal": 0,
            "total": 0,
            "totalPages": 0,
          },
          "_defaultValue": Object {
            "addNewsItem": [Function],
            "getNewsItem": [Function],
            "getNewsItems": [Function],
            "limit": 0,
            "newsItemList": Object {},
            "newsItems": Array [],
            "page": 0,
            "pageTotal": 0,
            "total": 0,
            "totalPages": 0,
          },
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`News-Provider Render newsConsumer matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NewsConsumer />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": Object {
      "$$typeof": Symbol(react.context),
      "Consumer": [Circular],
      "Provider": Object {
        "$$typeof": Symbol(react.provider),
        "_context": [Circular],
      },
      "_calculateChangedBits": null,
      "_changedBits": 0,
      "_changedBits2": 0,
      "_currentRenderer": Object {},
      "_currentRenderer2": null,
      "_currentValue": Object {
        "addNewsItem": [Function],
        "getNewsItem": [Function],
        "getNewsItems": [Function],
        "limit": 0,
        "newsItemList": Object {},
        "newsItems": Array [],
        "page": 0,
        "pageTotal": 0,
        "total": 0,
        "totalPages": 0,
      },
      "_currentValue2": Object {
        "addNewsItem": [Function],
        "getNewsItem": [Function],
        "getNewsItems": [Function],
        "limit": 0,
        "newsItemList": Object {},
        "newsItems": Array [],
        "page": 0,
        "pageTotal": 0,
        "total": 0,
        "totalPages": 0,
      },
      "_defaultValue": Object {
        "addNewsItem": [Function],
        "getNewsItem": [Function],
        "getNewsItems": [Function],
        "limit": 0,
        "newsItemList": Object {},
        "newsItems": Array [],
        "page": 0,
        "pageTotal": 0,
        "total": 0,
        "totalPages": 0,
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": Object {
          "$$typeof": Symbol(react.provider),
          "_context": [Circular],
        },
        "_calculateChangedBits": null,
        "_changedBits": 0,
        "_changedBits2": 0,
        "_currentRenderer": Object {},
        "_currentRenderer2": null,
        "_currentValue": Object {
          "addNewsItem": [Function],
          "getNewsItem": [Function],
          "getNewsItems": [Function],
          "limit": 0,
          "newsItemList": Object {},
          "newsItems": Array [],
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
        "_currentValue2": Object {
          "addNewsItem": [Function],
          "getNewsItem": [Function],
          "getNewsItems": [Function],
          "limit": 0,
          "newsItemList": Object {},
          "newsItems": Array [],
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
        "_defaultValue": Object {
          "addNewsItem": [Function],
          "getNewsItem": [Function],
          "getNewsItems": [Function],
          "limit": 0,
          "newsItemList": Object {},
          "newsItems": Array [],
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`News-Provider Render newsProvider matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NewsProvider />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Elem />,
      "initialState": Object {
        "limit": 0,
        "newsItemList": Object {},
        "newsItems": Array [],
        "page": 0,
        "pageTotal": 0,
        "total": 0,
        "totalPages": 0,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Elem />,
        "initialState": Object {
          "limit": 0,
          "newsItemList": Object {},
          "newsItems": Array [],
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
